@@ -5,25 +5,28 @@ import org.bukkit.Bukkit;
 import org.bukkit.Material;
 import org.bukkit.command.CommandSender;
 import org.bukkit.configuration.ConfigurationSection;
-import org.bukkit.entity.HumanEntity;
 import org.bukkit.entity.Player;
 import org.bukkit.inventory.ItemStack;
-import ru.loper.suncore.api.command.SubCommand;
+import org.jetbrains.annotations.NotNull;
+import ru.loper.suncore.api.colorize.StringColorize;
+import ru.loper.suncore.api.command.BuildableCommand;
+import ru.loper.suncore.api.command.register.SubCommandRegister;
 import ru.loper.suncore.api.config.CustomConfig;
-import ru.loper.suncore.utils.Colorize;
 import ru.loper.suntnt.config.TNTConfigManager;
 
-import java.util.ArrayList;
 import java.util.List;
+import java.util.stream.Collectors;
+import java.util.stream.Stream;
 
 @RequiredArgsConstructor
-public class CustomItemsArgument implements SubCommand {
+@SubCommandRegister(permission = "suntnt.command.customitems", aliases = "customitems")
+public class CustomItemsArgument implements BuildableCommand {
     private final TNTConfigManager configManager;
 
     @Override
-    public void onCommand(CommandSender sender, String[] args) {
+    public void handle(@NotNull CommandSender sender, String[] args) {
         if (args.length < 3) {
-            sender.sendMessage(Colorize.parse("&c ▶ &fИспользование: /tnt customitems [give/add/remove] [tnt] [player] [amount]"));
+            sender.sendMessage(StringColorize.parse(configManager.getCustomItemsUsageMessage()));
             return;
         }
         String operation = args[1].toLowerCase();
@@ -36,56 +39,65 @@ public class CustomItemsArgument implements SubCommand {
     }
 
     private void handleAddCustomItem(CommandSender sender, String[] args) {
-        if (args.length < 3) {
-            sender.sendMessage(Colorize.parse("&c ▶ &fНапишите название предмета"));
-            return;
-        }
-        ConfigurationSection itemsSection = getItemsSection();
-
-        if (!itemsSection.contains(args[2])) {
-            sender.sendMessage(Colorize.parse("&c ▶ &fДанного предмета не существует"));
-            return;
-        }
-
-        CustomConfig itemsConfig = configManager.getCustomConfig("customItems");
-        itemsConfig.getConfig().set("items." + args[2], null);
-        itemsConfig.saveConfig();
-        sender.sendMessage(Colorize.parse("&d ▶ &fВы успешно удалили кастомный предмет %s из конфига".formatted(args[2])));
-    }
-
-    private void handleRemoveCustomItem(CommandSender sender, String[] args) {
         if (!(sender instanceof Player player)) {
-            sender.sendMessage(Colorize.parse("&cДанная команда доступна только игрокам"));
+            sender.sendMessage(StringColorize.parse(configManager.getCustomItemsPlayerOnlyMessage()));
             return;
         }
 
         if (args.length < 3) {
-            sender.sendMessage(Colorize.parse("&c ▶ &fНапишите название предмета"));
+            sender.sendMessage(StringColorize.parse(configManager.getCustomItemsNameRequiredMessage()));
             return;
         }
 
         ItemStack itemStack = player.getInventory().getItemInMainHand();
         if (itemStack.getType().equals(Material.AIR)) {
-            sender.sendMessage(Colorize.parse("&c ▶ &fВозьмите в руку предмет, который хотите добавить"));
+            sender.sendMessage(StringColorize.parse(configManager.getCustomItemsHoldItemMessage()));
             return;
         }
 
         CustomConfig itemsConfig = configManager.getCustomConfig("customItems");
         itemsConfig.getConfig().set("items." + args[2], itemStack);
         itemsConfig.saveConfig();
-        sender.sendMessage(Colorize.parse("&d ▶ &fВы успешно добавили кастомный предмет %s в конфиг".formatted(itemStack.getItemMeta().getDisplayName())));
+
+        String displayName = itemStack.getItemMeta().hasDisplayName() ?
+                itemStack.getItemMeta().getDisplayName() : itemStack.getType().name();
+
+        sender.sendMessage(StringColorize.parse(configManager.getCustomItemsAddSuccessMessage()
+                .replace("{name}", displayName)));
+    }
+
+    private void handleRemoveCustomItem(CommandSender sender, String[] args) {
+        if (args.length < 3) {
+            sender.sendMessage(StringColorize.parse(configManager.getCustomItemsNameRequiredMessage()));
+            return;
+        }
+
+        ConfigurationSection itemsSection = getItemsSection();
+        if (itemsSection == null || !itemsSection.contains(args[2])) {
+            sender.sendMessage(StringColorize.parse(configManager.getCustomItemsNotExistsMessage()
+                    .replace("{item}", args[2])));
+            return;
+        }
+
+        CustomConfig itemsConfig = configManager.getCustomConfig("customItems");
+        itemsConfig.getConfig().set("items." + args[2], null);
+        itemsConfig.saveConfig();
+
+        sender.sendMessage(StringColorize.parse(configManager.getCustomItemsRemoveSuccessMessage()
+                .replace("{item}", args[2])));
     }
 
     private void handleGiveCustomItem(CommandSender sender, String[] args) {
         ConfigurationSection itemsSection = getItemsSection();
         if (itemsSection == null) {
-            sender.sendMessage(Colorize.parse("&c ▶ &fОшибка получения предметов из конфига"));
+            sender.sendMessage(StringColorize.parse(configManager.getCustomItemsConfigErrorMessage()));
             return;
         }
 
         ItemStack itemStack = itemsSection.getItemStack(args[2]);
         if (itemStack == null) {
-            sender.sendMessage(Colorize.parse("&c ▶ &fДанного предмета не существует"));
+            sender.sendMessage(StringColorize.parse(configManager.getCustomItemsNotExistsMessage()
+                    .replace("{item}", args[2])));
             return;
         }
 
@@ -93,17 +105,19 @@ public class CustomItemsArgument implements SubCommand {
         if (player == null) return;
 
         player.getInventory().addItem(itemStack.clone());
-        sender.sendMessage(Colorize.parse(String.format(
-                "&a ▶ &fВыдан предмет &e%s &fигроку &e%s",
-                itemStack.getItemMeta().getDisplayName(), player.getName()
-        )));
 
+        String displayName = itemStack.getItemMeta().hasDisplayName() ?
+                itemStack.getItemMeta().getDisplayName() : itemStack.getType().name();
+
+        sender.sendMessage(StringColorize.parse(configManager.getCustomItemsGiveSuccessMessage()
+                .replace("{item}", displayName)
+                .replace("{player}", player.getName())));
     }
 
     private Player resolveTargetPlayer(CommandSender sender, String[] args) {
         if (args.length < 4) {
             if (!(sender instanceof Player)) {
-                sender.sendMessage(Colorize.parse("&cДанная команда доступна только игрокам"));
+                sender.sendMessage(StringColorize.parse(configManager.getPlayerOnlyCommandMessage()));
                 return null;
             }
             return (Player) sender;
@@ -111,7 +125,7 @@ public class CustomItemsArgument implements SubCommand {
 
         Player player = Bukkit.getPlayer(args[3]);
         if (player == null) {
-            sender.sendMessage(Colorize.parse("&c ▶ &fУказанный игрок не найден или не в сети"));
+            sender.sendMessage(StringColorize.parse(configManager.getOfflineTargetMessage()));
             return null;
         }
         return player;
@@ -122,29 +136,42 @@ public class CustomItemsArgument implements SubCommand {
     }
 
     @Override
-    public List<String> onTabCompleter(CommandSender sender, String[] args) {
-        List<String> completions = new ArrayList<>();
+    public List<String> tabComplete(@NotNull CommandSender sender, String[] args) {
         if (args.length == 2) {
-            completions.addAll(List.of("give", "remove", "add"));
-        } else if (args.length == 3) {
-            switch (args[1].toLowerCase()) {
-                case "give", "remove" -> {
-                    ConfigurationSection itemsSection = getItemsSection();
-                    if (itemsSection != null) {
-                        completions.addAll(itemsSection.getKeys(false));
-                    }
-                }
-                case "add" -> completions.add("name");
-            }
-        } else if (args.length == 4 && args[0].equalsIgnoreCase("give")) {
-            completions.addAll(Bukkit.getOnlinePlayers().stream().map(HumanEntity::getName).toList());
-        } else if (args.length == 5 && args[0].equalsIgnoreCase("give")) {
-            completions.addAll(List.of("1", "8", "16", "32", "64"));
+            return Stream.of("give", "remove", "add")
+                    .filter(s -> s.toLowerCase().startsWith(args[1].toLowerCase()))
+                    .collect(Collectors.toList());
         }
 
-        String currentArg = args[args.length - 1].toLowerCase();
-        return completions.stream()
-                .filter(s -> s.toLowerCase().startsWith(currentArg))
-                .toList();
+        if (args.length == 3) {
+            String operation = args[1].toLowerCase();
+            if (operation.equals("give") || operation.equals("remove")) {
+                ConfigurationSection itemsSection = getItemsSection();
+                if (itemsSection != null) {
+                    return itemsSection.getKeys(false).stream()
+                            .filter(s -> s.toLowerCase().startsWith(args[2].toLowerCase()))
+                            .collect(Collectors.toList());
+                }
+            } else if (operation.equals("add")) {
+                return Stream.of("name")
+                        .filter(s -> s.toLowerCase().startsWith(args[2].toLowerCase()))
+                        .collect(Collectors.toList());
+            }
+        }
+
+        if (args.length == 4 && args[1].equalsIgnoreCase("give")) {
+            return Bukkit.getOnlinePlayers().stream()
+                    .map(Player::getName)
+                    .filter(s -> s.toLowerCase().startsWith(args[3].toLowerCase()))
+                    .collect(Collectors.toList());
+        }
+
+        if (args.length == 5 && args[1].equalsIgnoreCase("give")) {
+            return Stream.of("1", "8", "16", "32", "64")
+                    .filter(s -> s.startsWith(args[4]))
+                    .collect(Collectors.toList());
+        }
+
+        return List.of();
     }
 }
