@@ -5,22 +5,26 @@ import org.bukkit.Bukkit;
 import org.bukkit.command.CommandSender;
 import org.bukkit.entity.Player;
 import org.bukkit.inventory.ItemStack;
-import ru.loper.suncore.api.command.SubCommand;
-import ru.loper.suncore.api.items.ItemBuilder;
-import ru.loper.suncore.utils.Colorize;
+import org.jetbrains.annotations.NotNull;
+import ru.loper.suncore.api.colorize.StringColorize;
+import ru.loper.suncore.api.command.BuildableCommand;
+import ru.loper.suncore.api.command.register.SubCommandRegister;
+import ru.loper.suncore.api.itemstack.ItemBuilder;
 import ru.loper.suntnt.config.TNTConfigManager;
 
-import java.util.ArrayList;
 import java.util.List;
+import java.util.stream.Collectors;
+import java.util.stream.Stream;
 
 @RequiredArgsConstructor
-public class TNTGunGiveArgument implements SubCommand {
+@SubCommandRegister(permission = "suntnt.command.givegun", aliases = "givegun")
+public class TNTGunGiveArgument implements BuildableCommand {
     private final TNTConfigManager configManager;
 
     @Override
-    public void onCommand(CommandSender sender, String[] args) {
+    public void handle(@NotNull CommandSender sender, String[] args) {
         if (args.length < 2) {
-            sender.sendMessage(Colorize.parse("&c ▶ &fИспользование: /tnt givegun [player] [amount]"));
+            sender.sendMessage(StringColorize.parse(configManager.getGiveGunUsageMessage()));
             return;
         }
 
@@ -29,25 +33,26 @@ public class TNTGunGiveArgument implements SubCommand {
 
         int amount = resolveAmount(args);
         if (amount <= 0) {
-            sender.sendMessage(Colorize.parse("&c ▶ &fНекорректное количество предметов"));
+            sender.sendMessage(StringColorize.parse(configManager.getGiveGunInvalidAmountMessage()));
+            return;
         }
 
         ItemBuilder itemBuilder = configManager.getTntGunBuilder();
-
         ItemStack item = itemBuilder.build();
         item.setAmount(amount);
 
         player.getInventory().addItem(item);
-        sender.sendMessage(Colorize.parse(String.format(
-                "&a ▶ &fТнт пушка успешно выдана &fигроку &e%s",
-                player.getName()
-        )));
+
+        String message = configManager.getGiveGunSuccessMessage()
+                .replace("{player}", player.getName())
+                .replace("{amount}", String.valueOf(amount));
+        sender.sendMessage(StringColorize.parse(message));
     }
 
     private Player resolveTargetPlayer(CommandSender sender, String[] args) {
         if (args.length < 2) {
             if (!(sender instanceof Player)) {
-                sender.sendMessage(Colorize.parse("&cДанная команда доступна только игрокам"));
+                sender.sendMessage(StringColorize.parse(configManager.getPlayerOnlyCommandMessage()));
                 return null;
             }
             return (Player) sender;
@@ -55,7 +60,7 @@ public class TNTGunGiveArgument implements SubCommand {
 
         Player player = Bukkit.getPlayer(args[1]);
         if (player == null) {
-            sender.sendMessage(Colorize.parse("&c ▶ &fУказанный игрок не найден или не в сети"));
+            sender.sendMessage(StringColorize.parse(configManager.getOfflineTargetMessage()));
             return null;
         }
         return player;
@@ -72,18 +77,20 @@ public class TNTGunGiveArgument implements SubCommand {
     }
 
     @Override
-    public List<String> onTabCompleter(CommandSender commandSender, String[] args) {
-        List<String> completions = new ArrayList<>();
-
+    public List<String> tabComplete(@NotNull CommandSender sender, String[] args) {
         if (args.length == 2) {
-            Bukkit.getOnlinePlayers().forEach(player -> completions.add(player.getName()));
-        } else if (args.length == 3) {
-            completions.addAll(List.of("1", "8", "16", "32", "64"));
+            return Bukkit.getOnlinePlayers().stream()
+                    .map(Player::getName)
+                    .filter(s -> s.toLowerCase().startsWith(args[1].toLowerCase()))
+                    .collect(Collectors.toList());
         }
 
-        String currentArg = args[args.length - 1].toLowerCase();
-        return completions.stream()
-                .filter(s -> s.toLowerCase().startsWith(currentArg))
-                .toList();
+        if (args.length == 3) {
+            return Stream.of("1", "8", "16", "32", "64")
+                    .filter(s -> s.startsWith(args[2]))
+                    .collect(Collectors.toList());
+        }
+
+        return List.of();
     }
 }
